--- a/.travis.yml
+++ b/.travis.yml
@@ -29,19 +29,21 @@ jobs:
     - stage: build
       name: "Build Desktop App"
       script: './scripts/ci/build-electron.sh'
-    - stage: deploy
-      name: "Build and Deploy Desktop App"
-      script: './scripts/ci/release-desktop.sh --publish'
-    - # parallel run
-      name: "Build and Deploy Web App"
-      script: './scripts/ci/build-web.sh'
+    - stage: build-and-deploy
+      name: "Build and Deploy App (Web/Desktop)"
+      script: './scripts/ci/release-web-and-desktop.sh'
       before_deploy:
       - 'source ./scripts/ci/get-version.sh'
       - 'echo Checking exported version $PACKAGE_VERSION'
       deploy:
         provider: releases
         token: $GH_TOKEN
-        file: "./web/angular-wallet/web-phoenix-burst-wallet.tar.gz"
+        file:
+         - "./desktop/wallet/release-builds/web-phoenix*"
+         - "./desktop/wallet/release-builds/mac-phoenix*"
+         - "./desktop/wallet/release-builds/linux-phoenix*"
+         - "./desktop/wallet/release-builds/win-phoenix*"
+         - "./web/angular-wallet/CHANGELOG.md"
         skip_cleanup: true
         draft: true
         name: $PACKAGE_VERSION
@@ -56,7 +58,7 @@ stages:
   - prepare
   - name: build
     if: type != cron AND tag !~ /^desktop-\d+\.\d+\.\d+/ AND branch !~ /^force-deploy/
-  - name: deploy
+  - name: build-and-deploy
     # TODO: rename tag - but would affect auto updater
     if: tag =~ /^desktop-\d+\.\d+\.\d+/ OR branch =~ /^force-deploy/
 #  - name: nightly-release
