--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -38,8 +38,7 @@
     "release:macos": "npm run pack -- -m",
     "postinstall": "electron-builder install-app-deps",
     "publish": "electron-builder -p 'always' -wml",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "snyk-protect": "snyk protect"
   },
   "devDependencies": {
     "ajv": "^6.10.2",
@@ -66,5 +65,5 @@
     "snyk": "^1.290.1",
     "winston": "^3.2.1"
   },
-  "snyk": true
+  "snyk": false
 }
