--- a/lib/package.json
+++ b/lib/package.json
@@ -22,7 +22,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-typescript": "^7.7.2",
-    "@strictsoftware/typedoc-plugin-monorepo": "^0.3.1",
+    "@convergencelabs/typedoc-plugin-custom-modules": "^0.3.0",
     "@types/jest": "^24.0.23",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "^6.26.3",
@@ -39,7 +39,7 @@
     "regenerator-runtime": "^0.13.1",
     "ts-jest": "^24.0.2",
     "tslint": "^5.20.1",
-    "typedoc": "^0.17.4",
+    "typedoc": "^0.16.11",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -57,8 +57,7 @@
     "clearPackages": "lerna exec 'rm -rf node_modules' && rm -rf node_modules"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "typedoc-plugin-external-module-name": "^3.0.0"
+    "axios": "^0.19.0"
   },
   "husky": {
     "hooks": {
