--- a/lib/packages/contracts/package.json
+++ b/lib/packages/contracts/package.json
@@ -44,8 +44,7 @@
     "readme": "jsdoc2md  --files ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
-    "@burstjs/util": "^0.5.0-beta.10",
-    "bignumber.js": "^9.0.0"
+    "@burstjs/util": "^0.5.0-beta.10"
   },
   "husky": {
     "hooks": {
