--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "phoenix-burst-mobile-wallet",
-  "version": "0.1.0-beta.0",
+  "version": "0.1.1",
   "contributors": [
     "titanishu",
     "blankey1337"
