--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/http",
-  "version": "0.5.0-beta.12",
+  "version": "0.5.0",
   "description": "Send commands to BURST over HTTP",
   "contributors": [
     "ohager",
