--- a/lib/packages/util/package.json
+++ b/lib/packages/util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@burstjs/util",
-  "version": "0.5.0-beta.12",
+  "version": "0.5.0",
   "description": "Useful utilities and tools for building Burstcoin applications",
   "keywords": [
     "burst",
