--- a/lib/package.json
+++ b/lib/package.json
@@ -40,7 +40,7 @@
     "ts-jest": "^24.0.2",
     "tslint": "^5.20.1",
     "typedoc": "^0.16.11",
-    "typescript": "^3.8.3"
+    "typescript": "3.8.3"
   },
   "scripts": {
     "test": "jest --detectOpenHandles",
