fix: added package root

--- a/.github/workflows/build-wallet.yml
+++ b/.github/workflows/build-wallet.yml
@@ -9,6 +9,8 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
+        package_manager: [npm]
+        package_root: ["./desktop/wallet"]
 
     steps:
       - name: Check out Git repository
