fix: package manager

--- a/.github/workflows/build-wallet.yml
+++ b/.github/workflows/build-wallet.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        package_manager: [npm]
+        package_manager: [npm,yarn]
         package_root: ["./desktop/wallet"]
 
     steps:
