--- a/.github/workflows/build-wallet.yml
+++ b/.github/workflows/build-wallet.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        package_root: ["./desktop/wallet"]
+        package_manager: [npm]
 
     steps:
       - name: Check out Git repository
@@ -23,6 +23,7 @@ jobs:
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
         with:
+          package_root: "./desktop/wallet"
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
