--- a/.github/workflows/build-wallet.yml
+++ b/.github/workflows/build-wallet.yml
@@ -8,7 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+#        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [ubuntu-latest]
         package_manager: [npm]
 
     steps:
@@ -20,7 +21,7 @@ jobs:
         with:
           node-version: 12
 
-      - name: Install dependencies
+      - name: Prepare build environment
         run: |
           cd ./scripts
           npm ci
