feat: ng workflow, condition release flow

--- a/.github/workflows/build-release-desktop.yml
+++ b/.github/workflows/build-release-desktop.yml
@@ -1,6 +1,9 @@
-name: Build/release
+name: Build and Release Desktop App
 
-on: push
+on:
+  push:
+    tags:
+      - desktop-[0-9]+.[0-9]+.[0-9]+*
 
 jobs:
   release:
@@ -13,6 +16,7 @@ jobs:
 
     steps:
       - name: Check out Git repository
+        if: github.event.pull_request.merged
         uses: actions/checkout@v1
 
       - name: Install Node.js
@@ -28,6 +32,9 @@ jobs:
           npm ci
           cd ../web/angular-wallet
           npm ci
+
+      - name Run Tests
+        cd ../lib
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
