--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -5,7 +5,7 @@
     "email": "contact@burst-coin.org"
   },
   "productName": "Phoenix BURST Wallet",
-  "version": "1.0.3",
+  "version": "1.0.4-testci.0",
   "contributors": [
     "ohager",
     "blankey1337",
