--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -5,6 +5,8 @@ on:
     paths:
       - "web/**"
       - "desktop/**"
+    tags-ignore:
+      - desktop-[0-9]+.[0-9]+.[0-9]+*
 
 jobs:
   build-ng:
