feat(mobile): add message and encrypted message support

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -35,6 +35,7 @@
     "@burstjs/http": "^0.4.1",
     "@burstjs/util": "^0.4.1",
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/push-notification-ios": "^1.0.3",
     "@react-native-community/slider": "^2.0.0",
