--- a/.github/workflows/build-release-desktop.yml
+++ b/.github/workflows/build-release-desktop.yml
@@ -26,10 +26,10 @@ jobs:
         run: echo "Building Phoenix Version ${{steps.get-version.outputs.result}} on [${{matrix.os}}]"
 
       - name: Check out Git repository
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 12
 
@@ -41,7 +41,6 @@ jobs:
           npm ci
           cd ../web/angular-wallet
           npm ci
-
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
@@ -72,3 +71,4 @@ jobs:
           file: ./web/angular-wallet/${{steps.build-asset.outputs.assetFile}}
           tag: ${{ github.ref }}
           overwrite: true
+          prerelease: true
