--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -30,7 +30,7 @@
     "e2e": "ng e2e",
     "bundle-report": "webpack-bundle-analyzer dist/stats.json",
     "test:watch": "jest --watch",
-    "release": "npm run build:ci && node ../../scripts/publish.js --desktop"
+    "release": "node ../../scripts/publish.js --desktop"
   },
   "private": true,
   "dependencies": {
