--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -2,9 +2,9 @@ name: Test and Build Angular App
 
 on:
   push:
-    paths:
-      - "web/**"
-      - "desktop/**"
+#    paths:
+#      - "web/**"
+#      - "desktop/**"
     tags-ignore:
       - desktop-[0-9]+.[0-9]+.[0-9]+*
 
