--- a/.github/workflows/build-burstjs.yml
+++ b/.github/workflows/build-burstjs.yml
@@ -2,8 +2,8 @@ name: Build BurstJS
 
 on:
   push:
-    paths:
-      - "lib/**"
+#    paths:
+#      - "lib/**"
     tags-ignore:
         - desktop-[0-9]+.[0-9]+.[0-9]+*
 
