--- a/.github/workflows/build-burstjs.yml
+++ b/.github/workflows/build-burstjs.yml
@@ -2,7 +2,9 @@ name: Build BurstJS
 
 on:
   push:
-#    paths:
+    branches:
+      - "*"
+    #    paths:
 #      - "lib/**"
     tags-ignore:
         - desktop-[0-9]+.[0-9]+.[0-9]+*
