ci: added path filter for building

--- a/.github/workflows/build-burstjs.yml
+++ b/.github/workflows/build-burstjs.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - "**"
-#    paths:
-#      - "lib/**"
+    paths:
+      - "lib/**"
     tags-ignore:
         - desktop-[0-9]+.[0-9]+.[0-9]+*
 
