--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - "**"
-#    paths:
-#      - "web/**"
-#      - "desktop/**"
+    paths:
+      - "web/**"
+      - "desktop/**"
     tags-ignore:
       - desktop-[0-9]+.[0-9]+.[0-9]+*
 
