--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -6,7 +6,7 @@
   },
   "productName": "Phoenix Burstcoin Wallet",
   "description": "The Burstcoin web wallet",
-  "version": "1.0.3",
+  "version": "1.1.0-alpha.1",
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
