--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -102,6 +102,7 @@
     "@angular/language-service": "^8.2.14",
     "@angularclass/hmr": "^2.1.3",
     "@types/dragula": "^2.1.34",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^12.7.12",
     "codelyzer": "^5.1.2",
     "cross-env": "^5.2.1",
