feat: customized fee slider

--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -64,6 +64,7 @@
     "bn.js": "^5.0.0",
     "chart.js": "2.8.0",
     "classlist.js": "1.1.20150312",
+    "color": "^3.1.3",
     "core-js": "2.6.9",
     "csv-parse": "^4.8.2",
     "d3": "5.14.1",
@@ -99,10 +100,11 @@
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@angularclass/hmr": "^2.1.3",
+    "@types/bn.js": "^4.11.5",
+    "@types/color": "^3.0.1",
     "@types/dragula": "^2.1.34",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.7.12",
-    "@types/bn.js": "^4.11.5",
     "@types/prismjs": "1.16.0",
     "codelyzer": "^5.1.2",
     "cross-env": "^5.2.1",
