--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -71,6 +71,7 @@
     "d3-shape": "^1.3.7",
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
+    "hashicon": "^0.3.0",
     "jsqr": "^1.2.0",
     "lodash": "4.17.19",
     "lokijs": "^1.5.8",
