--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -58,20 +58,20 @@
     "@swimlane/ngx-charts": "12.0.1",
     "@swimlane/ngx-datatable": "15.0.2",
     "@swimlane/ngx-dnd": "8.0.0",
-    "@types/bn.js": "^4.11.5",
-    "@types/prismjs": "1.16.0",
     "angular-calendar": "0.28.2",
     "angular-in-memory-web-api": "0.9.0",
     "angular-notifier": "^6.0.1",
     "bn.js": "^5.0.0",
     "chart.js": "2.8.0",
     "classlist.js": "1.1.20150312",
+    "color": "^3.1.3",
     "core-js": "2.6.9",
     "csv-parse": "^4.8.2",
     "d3": "5.14.1",
     "d3-shape": "^1.3.7",
     "date-fns": "^1.30.1",
     "hammerjs": "2.0.8",
+    "hashicon": "^0.3.0",
     "jsqr": "^1.2.0",
     "lodash": "4.17.19",
     "lokijs": "^1.5.8",
@@ -101,9 +101,11 @@
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
     "@angularclass/hmr": "^2.1.3",
+    "@types/bn.js": "^4.11.5",
     "@types/dragula": "^2.1.34",
     "@types/lodash": "^4.14.168",
     "@types/node": "^12.7.12",
+    "@types/prismjs": "1.16.0",
     "codelyzer": "^5.1.2",
     "cross-env": "^5.2.1",
     "electron": "^12.0.2",
