Created typing and interface for getMiningInfo
Setting up for getMiningInfo api call

--- a/lib/package.json
+++ b/lib/package.json
@@ -59,7 +59,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-push": "../pre-push.sh --no-verify"
+            "pre-push": "../pre-push.sh"
         }
     },
     "dependencies": {
