--- a/.github/workflows/build-angular.yml
+++ b/.github/workflows/build-angular.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 12
 
-      - name: Run BurstJS Tests
+      - name: Run SignumJS Tests
         run: |
           cd ./lib
           npm ci
