--- a/lib/packages/util/package.json
+++ b/lib/packages/util/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "@burstjs/util",
-  "version": "0.6.0-beta.6",
-  "description": "Useful utilities and tools for building Burstcoin applications",
+  "name": "@signumjs/util",
+  "version": "1.0.0",
+  "description": "Useful utilities and tools for building Signum Network applications",
   "keywords": [
-    "burst",
-    "burstcoin",
+    "signum",
+    "signum-network",
+    "blockchain",
+    "smartcontracts",
     "utils",
-    "burstjs"
+    "signumjs"
   ],
   "contributors": [
     "ohager",
