--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -1,11 +1,11 @@
 {
   "name": "phoenix",
   "author": {
-    "name": "Burst Apps Team (BAT)",
-    "email": "contact@burst-coin.org"
+    "name": "Signum Network",
+    "email": "development@signum.network"
   },
-  "productName": "Phoenix BURST Wallet",
-  "version": "1.1.0-beta.5",
+  "productName": "Phoenix Signum Wallet",
+  "version": "1.2.0",
   "contributors": [
     "ohager",
     "blankey1337",
@@ -14,13 +14,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/burst-apps-team/phoenix"
+    "url": "https://github.com/signum-netzwerk/phoenix"
   },
   "license": "GPL-3.0",
-  "description": "The BurstCoin desktop wallet",
+  "description": "The Signum desktop wallet",
   "keywords": [
-    "burst",
-    "burstcoin",
+    "signum",
+    "signum-network",
     "wallet"
   ],
   "main": "main.js",
@@ -50,7 +50,7 @@
     "rimraf": "^3.0.0"
   },
   "update": {
-    "repositoryRootUrl": "https://api.github.com/repos/burst-apps-team/phoenix",
+    "repositoryRootUrl": "https://api.github.com/repos/signum-network/phoenix",
     "certFingerprint": "0A:E3:84:BF:D4:DD:E9:D1:3E:50:C5:85:7C:05:A4:42:C9:3F:8E:01:44:5E:E4:B3:45:40:D2:2B:D1:E3:7F:1B",
     "checkIntervalMins": 10,
     "tagPrefix": "desktop-"
