--- a/web/angular-wallet/package.json
+++ b/web/angular-wallet/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "phoenix-burstcoin-web-wallet",
+  "name": "phoenix-signum-web-wallet",
   "author": {
-    "name": "Burst Apps Team (BAT)",
-    "email": "contact@burst-coin.org"
+    "name": "Signum Network",
+    "email": "development@signum.network"
   },
-  "productName": "Phoenix Burstcoin Wallet",
-  "description": "The Burstcoin web wallet",
-  "version": "1.1.0-beta.5",
+  "productName": "Phoenix Signum Wallet",
+  "description": "The Signum web wallet",
+  "version": "1.2.0",
   "license": "GPL-3.0",
   "contributors": [
     "ohager",
