--- a/lib/packages/contracts/package.json
+++ b/lib/packages/contracts/package.json
@@ -17,7 +17,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/burst-apps-team/phoenix"
+    "url": "https://github.com/signum-network/phoenix"
   },
   "engines": {
     "node": ">=10"
@@ -54,7 +54,7 @@
     "readme": "jsdoc2md  --files ./src/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
-    "@burstjs/util": "^0.6.0-beta.6"
+    "@signumjs/util": "^1.0.0"
   },
   "husky": {
     "hooks": {
