--- a/lib/packages/core/package.json
+++ b/lib/packages/core/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/burst-apps-team/phoenix"
+    "url": "https://github.com/signum-network/phoenix"
   },
   "engines": {
     "node": ">=10"
@@ -56,10 +56,10 @@
     "readme": "jsdoc2md  --files ./src/**/*.ts --template ./README.md.hbs --configure ../../jsdoc2md.json > ./README.md"
   },
   "dependencies": {
-    "@burstjs/contracts": "^0.6.0-beta.6",
-    "@burstjs/crypto": "^0.6.0-beta.6",
-    "@burstjs/http": "^0.6.0-beta.6",
-    "@burstjs/util": "^0.6.0-beta.6"
+    "@signumjs/contracts": "^1.0.0",
+    "@signumjs/crypto": "^1.0.0",
+    "@signumjs/http": "^1.0.0",
+    "@signumjs/util": "^1.0.0"
   },
   "husky": {
     "hooks": {
