chore: renamed ng imports to signumjs

--- a/web/angular-wallet/tsconfig.json
+++ b/web/angular-wallet/tsconfig.json
@@ -12,7 +12,7 @@
     "skipLibCheck": true,
     "paths": {
       "@fuse": ["@fuse/"],
-      "@burstjs/*": ["../../../lib/packages/*"]
+      "@signumjs/*": ["../../../lib/packages/*"]
     },
     "target": "es5",
     "typeRoots": [
