chore: renaming @burstjs

--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -56,7 +56,7 @@
     "tagPrefix": "desktop-"
   },
   "dependencies": {
-    "@burstjs/http": "^0.4.3",
+    "@signumjs/http": "^1.0.0",
     "electron-dl": "^3.0.0",
     "get-ssl-certificate": "^2.3.3",
     "js-yaml": "^3.13.1",
