--- a/lib/packages/http/package.json
+++ b/lib/packages/http/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@signumjs/http",
   "description": "SignumJS Generic Http Module",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "keywords": [
     "signum",
     "signum-network",
