--- a/lib/packages/monitor/package.json
+++ b/lib/packages/monitor/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@signumjs/monitor",
   "description": "Monitor transactions on Signum Network blockchain",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "keywords": [
     "signum",
     "signum-network",
