fix: malformed utf-8

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signumjs",
-  "version": "1.0.0",
+  "version": "1.0.0-rc.1",
   "description": "Signum Network Reference Library",
   "contributors": [
     "ohager",
