--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/signum-netzwerk/phoenix"
+    "url": "https://github.com/signum-network/phoenix"
   },
   "license": "GPL-3.0",
   "description": "The Signum desktop wallet",
@@ -56,7 +56,7 @@
     "tagPrefix": "desktop-"
   },
   "dependencies": {
-    "@signumjs/http": "^1.0.0",
+    "@signumjs/http": "^1.0.0-rc.0",
     "electron-dl": "^3.0.0",
     "get-ssl-certificate": "^2.3.3",
     "js-yaml": "^3.13.1",
