--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "@signumjs/http": "^1.0.0-rc.0",
     "electron-dl": "^3.0.0",
+    "fs-extra": "^10.0.0",
     "get-ssl-certificate": "^2.3.3",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.21",
