fix: CSV import - fixes #1477

--- a/desktop/wallet/package.json
+++ b/desktop/wallet/package.json
@@ -6,7 +6,7 @@
   },
   "homepage": "https://phoenix-wallet.rocks",
   "productName": "Phoenix Signum Wallet",
-  "version": "1.2.0",
+  "version": "1.2.0-rc.1",
   "contributors": [
     "ohager",
     "blankey1337",
