chore: additional startup script and separated setup docs

--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -17,6 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_STORE_PASSWORD=store.password
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_KEY_PASSWORD=key.password
 android.useAndroidX=true
 android.enableJetifier=true
