--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "phoenix-burst-mobile-wallet",
+  "name": "phoenix-mobile-wallet",
   "version": "0.1.1",
   "contributors": [
     "titanishu",
-    "blankey1337"
+    "blankey1337",
+    "ohager"
   ],
   "repository": {
     "type": "git",
@@ -20,9 +21,11 @@
     "check:tsc": "tsc --noEmit",
     "dev": "npm run dev:ios",
     "dev:ios": "react-native run-ios --simulator=\"iPhone SE\"",
-    "dev:android": "react-native run-android",
-    "init": "npm install && npm run link",
-    "link": "react-native link",
+    "start:android": "react-native run-android",
+    "start:metro" : "react-native start",
+    "start:devtools" : "react-devtools",
+    "start": "concurrently npm:start:*",
+    "postinstall": "react-native link",
     "lint": "tslint --fix --project tsconfig.json 'src/**/*.{ts,tsx}'",
     "lint:staged": "tslint --fix --project tsconfig.json",
     "translations:sort": "node tasks/sortJsonDir.js src/translations && git add src/translations/*.json",
@@ -42,8 +45,6 @@
     "@react-navigation/bottom-tabs": "^5.7.3",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
-    "@types/d3-shape": "^1.3.1",
-    "@types/react-native-svg-charts": "^5.0.2",
     "d3-shape": "^1.3.5",
     "i18n-js": "^3.2.2",
     "lodash": "^4.17.19",
@@ -80,20 +81,25 @@
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/runtime": "^7.11.0",
+    "@types/d3-shape": "^1.3.1",
     "@types/i18n-js": "^3.0.1",
     "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.129",
     "@types/react": "^16.8.17",
     "@types/react-native": "^0.57.57",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-svg-charts": "^5.0.2",
     "@types/react-native-touch-id": "^4.0.1",
     "@types/react-native-vector-icons": "^6.4.1",
     "@types/react-navigation": "^3.0.7",
     "@types/react-redux": "^7.0.9",
     "@types/react-test-renderer": "^16.8.1",
     "babel-jest": "24.8.0",
+    "concurrently": "^6.2.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
+    "react-devtools": "^4.10.4",
+    "react-native-cli": "^2.0.1",
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.8.3",
     "sort-json": "^2.0.0",
